--- a/public/bulk.html
+++ b/public/bulk.html
@@ -1,18 +1,55 @@
-<!DOCTYPE html><html><body>
-<h2>Bulk Sender</h2>
-<input id='id' placeholder='office-1'><br>
-<textarea id='msg' placeholder='message'></textarea><br>
-<input type='file' id='file'><br>
-<button onclick='send()'>Send</button>
-<pre id='out'></pre>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8"/>
+  <title>WhatsApp Bulk Sender</title>
+  <style>
+    body { background:#f5f5f5; font-family:Arial; padding:40px; }
+    .box {
+      background:#fff; padding:25px; border-radius:10px;
+      max-width:500px; margin:auto; box-shadow:0 0 10px #ccc;
+    }
+    input, textarea, button { width:100%; margin-top:10px; padding:10px; }
+    textarea { height:140px; }
+    button { background:#25D366; color:#fff; border:none; cursor:pointer; }
+  </style>
+</head>
+<body>
+<div class="box">
+  <h2>📤 WhatsApp Bulk Sender</h2>
+  <label>WhatsApp ID</label>
+  <input type="text" id="id" placeholder="office-1"/>
+  <label>Message Template</label>
+  <textarea id="message" placeholder="שלום וברכה <mother> ..."></textarea>
+  <label>Excel File</label>
+  <input type="file" id="file" accept=".xlsx"/>
+  <button onclick="sendBulk()">Send Now</button>
+  <pre id="status"></pre>
+</div>
 <script>
-async function send(){
- let fd=new FormData();
- fd.append('id',id.value);
- fd.append('message',msg.value);
- fd.append('file',file.files[0]);
- let r=await fetch('/send-bulk',{method:'POST',body:fd});
- out.textContent=await r.text();
+async function sendBulk() {
+  const id = document.getElementById('id').value;
+  const message = document.getElementById('message').value;
+  const file = document.getElementById('file').files[0];
+  const status = document.getElementById('status');
+
+  if (!id || !message || !file) {
+    status.textContent = '❌ Missing fields';
+    return;
+  }
+
+  const fd = new FormData();
+  fd.append('id', id);
+  fd.append('message', message);
+  fd.append('file', file);
+
+  status.textContent = '⏳ Sending...';
+
+  const res = await fetch('/send-bulk', { method: 'POST', body: fd });
+  const data = await res.json();
+
+  status.textContent = JSON.stringify(data, null, 2);
 }
 </script>
-</body></html>
+</body>
+</html>
